<resources>
    <string name="app_name">Exchange</string>
    <string name="title_history">History</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_analytics">Analytics</string>
    <string name="week">7 days</string>
    <string name="two_weeks">14 days</string>
    <string name="month">30 days</string>
    <string name="all">all</string>
    <string name="no_filter">no Filter</string>
    <string name="one">1</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="submit">submit</string>
    <string name="datetime">datetime</string>
    <string name="f_v">f_v</string>
    <string name="t_v">t_v</string>
</resources>
