<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:text="@+id/history_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history_datetime"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/datetime"/>

    <TextView
        android:id="@+id/history_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/from"
        android:text="@+id/history_from"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/history_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:hint="@string/to"
        android:text="@+id/history_to"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/history_from_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/f_v"
        android:text="@+id/history_from_value"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/history_to_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="20dp"
        android:hint="@string/t_v"
        android:text="@+id/history_to_value"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</RelativeLayout>