<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".main.operation.ExchangeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/first_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="30sp"
            />
        <EditText
            android:id="@+id/exchange_input_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            android:text="@string/one"
            android:maxLength="10"
            android:focusedByDefault="true"
            />

       <Button
           android:id="@+id/exchange_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="CHANGE"/>

        <TextView
            android:id="@+id/exchange_result_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            />
        <TextView
            android:id="@+id/second_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="30sp"
            android:paddingLeft="10sp"
            />
</LinearLayout>

