<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.analytics.AnalyticsFragment">

    <tinkoff.fintech.exchange.main.analytics.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/radioGroup"
        android:layout_gravity="center" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:checkedButton="@id/analytics_filter_week"
        android:layout_below="@id/android:list"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/analytics_filter_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/week"/>

        <RadioButton
            android:id="@+id/analytics_filter_two_weeks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/two_weeks"/>

        <RadioButton
            android:id="@+id/analytics_filter_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/month"/>

    </RadioGroup>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="190dp">
    </ListView>
</RelativeLayout>
